--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Mod Info
-maven_group = com.example
-archives_base_name = modid
+maven_group = me.zziger.createenhancedfilters
+archives_base_name = create_enhanced_filters
 mod_version = 0.0.1
 
 minecraft_version = 1.19.2
@@ -20,12 +20,12 @@ parchment_version = 2022.11.27
 
 # Create
 # https://modrinth.com/mod/create-fabric/versions
-create_version = 0.5.1-f-build.1334+mc1.19.2
+create_version = 0.5.1-f-build.1416+mc1.19.2
 
 # Development QOL
 # Create supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
 # set to disabled to have none of them.
-recipe_viewer = unspecified
+recipe_viewer = JEI
 # JEI - https://www.curseforge.com/minecraft/mc-mods/jei/files/all
 jei_version = 11.6.0.1019
 # REI - https://modrinth.com/mod/rei/versions
